# tmseegpy

./: .gitignore  MANIFEST.in  README.md  eeg_env.yml  environment.yml  package-lock.json  pyproject.toml  requirements.txt  setup.py  tmseegpy.spec
.github/workflows/: conda.yml  gui-release.yml  python-package.yml
PCIst_output/: README.md
backend/: __init__.py  ica_process.py  run_app_server.py  server.py
backend/uploads/TMSEEG/NeurOne-2024-12-04T163850_wake/: NeurOne-2024-12-04T163850_wake.ses
for_neurophysiologists/: README.md
matlab_code/: TESA_for_comparison.m  TME_EEG_preproc_work.m
notebooks/: R.ipynb  parse_logs.py  raw_eeg_analysis.ipynb  test_classi.ipynb  tmseegpy_analysis.ipynb
notebooks/.ipynb_checkpoints/: test_classi-checkpoint.ipynb
output/: pcist_research_stats_20241202_204452.txt  preproc_stats_20241202_204452.txt
output_cut/: pcist_research_stats_20241207_015520.txt  pcist_research_stats_20241207_020627.txt  preproc_stats_20241207_015520.txt  preproc_stats_20241207_020627.txt  tep_validation_2023-11-30T150853.txt  tep_validation_2023-12-15T121633.txt  tep_validation_2023-12-19T143454.txt  tep_validation_2023-12-19T150539.txt  tep_validation_2023-12-19T152518.txt  tep_validation_2024-05-31T143456.txt  tep_validation_2024-10-16T145951LMC.txt  tep_validation_2024-10-16T151006LPFC.txt  tep_validation_2024-12-04T163850_wake.txt  tep_validation_2024-12-04T170714_sleep.txt
tms_eeg_analysis/: __init__.py
tmseegpy/: __init__.py  analyze.py  cli.py  cli_ica_selector.py  dataloader.py  filter.py  gui.py  ica_topo_classifier.py  main.py  microstates.py  pcist.py  preproc.py  preproc_vis.py  react_ica_selector.py  run.py  run_analysis.py  tms_artifact.py  validate_tep.py
tmseegpy-gui-react/: .gitignore  electron-builder.yml  package-lock.json  package.json
tmseegpy-gui-react/assets/: icon.icns
tmseegpy-gui-react/build-config/: entitlements.mac.plist  installer.nsh
tmseegpy-gui-react/build-scripts/: clean.js
tmseegpy-gui-react/electron/: main.js  preload.js
tmseegpy-gui-react/public/: electron.js  index.html  main.js  preload.js
tmseegpy-gui-react/src/: ICAComponentVisualizer.jsx  ServerCheck.jsx  TmseegpyGUI.jsx  index.jsx  useWebSocketHandler.jsx
tmseegpy-gui-react/src/components/ui/: button.jsx  card.jsx
tmseegpy-gui-react/src/services/: api.js  logger.js  parameterMapping.js  websocket.js
tmseegpy-gui-react/src/styles/: Console.css
tmseegpy/gui/: __init__.py  gui_app.py  ica_handler.py
tmseegpy/ica_selector_gui/: __init__.py  ica_selector.py  ica_selector_react.py  websocket_ica_selector.py
tmseegpy/mne_icalabel/iclabel/network/tests/: test_network.py
tmseegpy/python_gui/: gui_app.py
tmseegpy/server/: __init__.py  __main__.py  ica_process.py  server.py
tmseegpy/server/.ipynb_checkpoints/: server_logger-checkpoint.py
